# timetrace-debugger

./: .gitignore  LICENSE  pyproject.toml  readme.md
examples/: sample.py
tests/: async_test.py  basic_test.py  exception_test.py  function_test.py  module_a.py  project_test.py  run_all_tests.py  stress_test.py  thread_test.py
timetrace/: main.py
timetrace/adapters/: python_adapter.py
timetrace/cli/: debugger.py
timetrace/core/: breakpoints.py  diff.py  models.py  recorder.py  replay.py  timeline.py  watchpoints.py
