[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timetrace-debugger"
version = "1.0.2"
description = "Time-travel debugging engine for Python"
readme = "readme.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  {name = "Varkala Shashidhar"}
]

[project.scripts]
timetrace = "timetrace.main:main"
